TFP-7099 arbeidsgiverinitiert inntektsmelding * oppretter forespørsel og ferdigstiller i samme transaksjon og før oppdatering av portaler som skjer asynkront * oppdaterer portaler tasker opprettes slik at de utføres i rekkefølge og ikke før foregående task har status Ferdig